--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,14 @@ main #counter {
   border: 1px solid #555;
 }
 
-main i:before {
+main i {
   padding: 0;
   margin: 0;
+}
+
+main i:hover {
+  color: #999;
+  cursor: pointer;
 }
 
 main #tens, main #ones {
