--- a/css/style.scss
+++ b/css/style.scss
@@ -34,13 +34,14 @@ main {
     border: 1px solid #555;
   }
 
-  // #counter > div {
-
-  // }
-
-  i:before {
+  i {
     padding: 0;
     margin: 0;
+
+    &:hover {
+      color: #999;
+      cursor: pointer;
+    }
   }
 
   #tens, #ones {
