--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,10 @@ body {
 
 main {
 
+  #you, #opponent {
+    margin: 20px 0;
+  }
+
   #wrapper {
     display: flex;
     flex-direction: column;
@@ -26,7 +30,8 @@ main {
     font-weight: 300;
   }
 
-  #counter {
+  .counter {
+    position: relative;
     background: #fff;
     display: flex;
     justify-content: center;
@@ -35,25 +40,35 @@ main {
   }
 
   i {
-    padding: 0;
-    margin: 0;
-
     &:hover {
       color: #999;
       cursor: pointer;
     }
   }
 
-  #tens, #ones {
+  .fa-caret-down, .fa-caret-up {
+    padding: 0;
+    margin: 0;
+
+  }
+
+  .tens, .ones {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
-  #tens-digit, #ones-digit {
+  .tens-digit, .ones-digit {
     border: 1px solid #555;
     border-radius: 4px;
     padding: 0px 8px;
+  }
+
+  .fa-redo {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 1.5rem;
   }
 }
 
