added custom counters, fixed collapsible tab

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-size: 3rem;
+  font-size: 3.5rem;
   font-family: 'Open-Sans', sans-serif;
 }
 
@@ -22,14 +22,22 @@ main #wrapper {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   min-height: 100vh;
 }
 
 main #you, main #opponent {
-  margin: 10px 0;
+  margin: 10px auto;
+  width: 250px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 main #you {
@@ -52,7 +60,7 @@ main .counter {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 250px;
+  width: inherit;
   border: 1px solid #555;
 }
 
@@ -88,12 +96,93 @@ main .tens-digit, main .ones-digit {
 main .fa-redo {
   position: absolute;
   bottom: 10px;
-  right: 10px;
+  left: 10px;
   font-size: 1.5rem;
 }
 
-@media (min-width: 1024px) {
+main .fa-angle-double-down, main .fa-angle-double-up {
+  position: absolute;
+  bottom: 10px;
+  right: 15px;
+  font-size: 1.5rem;
+}
+
+main .collapse {
+  width: 250px;
+  border: 1px solid #555;
+  display: block;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: height 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: height 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+main .collapse .add-counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 40px;
+}
+
+main .collapse .add-counter .counter-name {
+  margin-left: 5px;
+  border: 1px solid #d5d5d5;
+  padding: 3px;
+}
+
+main .collapse .add-counter .counter-add, main .collapse .add-counter .counter-minus {
+  font-size: 1.25rem;
+  margin: 8px;
+}
+
+main .collapse .add-counter .counter-output {
+  display: inline-block;
+  font-size: 0.9rem;
+  margin-left: 10px;
+  width: 20px;
+}
+
+main .show {
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
+}
+
+main .buttons {
+  width: 250px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+main .buttons .add-new-counter {
+  border-right: 1px solid #555;
+  border-left: 1px solid #555;
+  border-bottom: 1px solid #555;
+  width: 45px;
+  padding: 5px 2px;
+  text-align: center;
+  font-size: 0.8rem;
+}
+
+@media (min-width: 420px) {
   main #wrapper {
+    margin-top: 20vh;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
