--- a/css/style.scss
+++ b/css/style.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-size: 3rem;
+  font-size: 3.5rem;
   font-family: 'Open-Sans', sans-serif;
 }
 
@@ -17,12 +17,15 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     min-height: 100vh;
   }
 
   #you, #opponent {
-    margin: 10px 0;
+    margin: 10px auto;
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   #you {
@@ -39,7 +42,7 @@ main {
     background: #fff;
     display: flex;
     justify-content: center;
-    width: 250px;
+    width: inherit;
     border: 1px solid #555;
   }
 
@@ -71,12 +74,80 @@ main {
   .fa-redo {
     position: absolute;
     bottom: 10px;
-    right: 10px;
+    left: 10px;
     font-size: 1.5rem;
   }
 
-  @media(min-width: 1024px) {
+  .fa-angle-double-down, .fa-angle-double-up {
+    position: absolute;
+    bottom: 10px;
+    right: 15px;
+    font-size: 1.5rem;
+  }
+
+  .collapse {
+    width: 250px;
+    border: 1px solid #555;
+    display: block;
+    height: 0;
+    overflow: hidden;
+    transition: height 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+
+    .add-counter {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      height: 40px;
+
+      .counter-name {
+        margin-left: 5px;
+        border: 1px solid lighten(#555, 50%);
+        padding: 3px;
+      }
+  
+      .counter-add, .counter-minus {
+        font-size: 1.25rem;
+        margin: 8px;
+      }
+  
+      .counter-output {
+        display: inline-block;
+        font-size: 0.9rem;
+        margin-left: 10px;
+        width: 20px;
+      }
+    }
+  }
+
+  .show {
+    transform: scaleY(1);
+  }
+
+
+  .buttons {
+    width: 250px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    opacity: 0;
+    transition: opacity 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
+
+    .add-new-counter {
+      border-right: 1px solid #555;
+      border-left: 1px solid #555;
+      border-bottom: 1px solid #555;
+      width: 45px;
+      padding: 5px 2px;
+      text-align: center;
+      font-size: 0.8rem;
+    }
+  }
+
+
+
+  @media(min-width: 420px) {
     #wrapper {
+      margin-top: 20vh;
       flex-direction: row;
     }
 
@@ -89,4 +160,3 @@ main {
     }
   }
 }
-
