fixed counter size for windows

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ main .collapse .add-counter .counter-name {
   margin-left: 5px;
   border: 1px solid #d5d5d5;
   padding: 3px;
+  width: 130px;
 }
 
 main .collapse .add-counter .counter-add, main .collapse .add-counter .counter-minus {
