--- a/css/style.scss
+++ b/css/style.scss
@@ -104,6 +104,7 @@ main {
         margin-left: 5px;
         border: 1px solid lighten(#555, 50%);
         padding: 3px;
+        width: 130px;
       }
   
       .counter-add, .counter-minus {
