--- a/css/style.scss
+++ b/css/style.scss
@@ -101,15 +101,19 @@ main {
       height: 40px;
 
       .counter-name {
-        margin-left: 5px;
         border: 1px solid lighten(#555, 50%);
         padding: 3px;
         width: 130px;
       }
-  
+
       .counter-add, .counter-minus {
         font-size: 1.25rem;
         margin: 8px;
+      }
+
+      .delete-counter {
+        font-size: 1rem;
+        margin: 5px;
       }
   
       .counter-output {
