--- a/css/style.scss
+++ b/css/style.scss
@@ -12,6 +12,21 @@ body {
 }
 
 main {
+  background-image: url('../img/clouds-pink-purple.jpg');
+  background-size: cover;
+  position: relative;
+  z-index: -2;
+
+  &::after {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    content: '';
+    background: rgba(#fff, 0.5);
+    position: absolute;
+    z-index: -1;
+  }
+
 
   #wrapper {
     display: flex;
@@ -39,7 +54,7 @@ main {
 
   .counter {
     position: relative;
-    background: #fff;
+    background: rgba(#fff, 0.3);
     display: flex;
     justify-content: center;
     width: inherit;
@@ -48,7 +63,7 @@ main {
 
   i {
     &:hover {
-      color: #999;
+      color: #888;
       cursor: pointer;
     }
   }
@@ -88,13 +103,15 @@ main {
   .collapse {
     width: 250px;
     border: 1px solid #555;
+    background: rgba(#fff, 0.3);
     display: block;
     height: 0;
     overflow: hidden;
     transition: height 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
 
     .add-counter {
-      width: 250px;
+      width: inherit;
+      background: inherit;
       display: flex;
       justify-content: space-evenly;
       align-items: center;
@@ -151,8 +168,8 @@ main {
 
   @media(min-width: 420px) {
     #wrapper {
-      margin-top: 20vh;
       flex-direction: row;
+      align-items: center;
     }
 
     #you {
